[package]
name = "wsweep"
version = "0.1.0"
edition = "2021"
authors = ["[object Object] <whaledev.contact@gmail.com>"]
license = "MIT"
description = "A simple tool to clear module and target directories from your projects!"
readme = "README.md"
homepage = "https://github.com/0bject-0bject/wsweep"
repository = "https://github.com/0bject-0bject/wsweep"
keywords = ["cli", "directory", "organization", "fs"]
categories = ["command-line-utilities", "network-programming", "files"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enable-ansi-support = "0.2.1"
clap = "4.3.11"

[profile.release]
lto = true
panic = 'abort'